log
Thu 20 Apr 2023 09:22:59 PM UTC: 
 tests:  1|8
total_score: 0/70
eb693d5
Thu 20 Apr 2023 11:24:42 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
459e996
Fri 21 Apr 2023 12:54:04 PM UTC: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:16: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   75 |     TreeNode * aux;
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
f0634a3
Fri 21 Apr 2023 12:54:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:16: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   75 |     TreeNode * aux;
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
e46b971
Fri 21 Apr 2023 12:54:34 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
a42c02a
Fri 21 Apr 2023 12:57:52 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
c32834c
Fri 21 Apr 2023 12:59:30 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
4d9eeb9
Fri 21 Apr 2023 01:04:05 PM UTC: 
 treemap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  6|7
total_score: 5/70
8f03d45
Fri 21 Apr 2023 01:05:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|7
total_score: 5/70
344d765
Fri 21 Apr 2023 01:09:26 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
eb9e119
Fri 21 Apr 2023 01:33:31 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  11|6
total_score: 15/70
b29be78
Fri 21 Apr 2023 01:34:47 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1c2478c
Fri 21 Apr 2023 01:35:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
f9cf541
Fri 21 Apr 2023 01:43:15 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
f31b13a
Fri 21 Apr 2023 01:45:07 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:11: error: ‘aux’ may be used uninitialized [-Werror=maybe-uninitialized]
   59 |     if(aux->left != NULL){
      |        ~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
067dbc0
Fri 21 Apr 2023 01:45:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b35ed78
Fri 21 Apr 2023 01:46:03 PM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:4:
treemap.c:60:1: error: expected identifier or ‘(’ before ‘}’ token
   60 | }
      | ^
Compilation failed
cad2447
Fri 21 Apr 2023 01:46:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
c1c8d25
Fri 21 Apr 2023 01:48:36 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
8ffcdc6
Fri 21 Apr 2023 01:49:52 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:15: error: ‘aux’ may be used uninitialized [-Werror=maybe-uninitialized]
   57 |     aux->left = nuevo;
      |     ~~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
12d4849
Fri 21 Apr 2023 01:50:25 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6da6f06
Fri 21 Apr 2023 01:50:45 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
11b4fdf
Fri 21 Apr 2023 01:51:13 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
9e005c2
Fri 21 Apr 2023 01:52:35 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
294d0de
Fri 21 Apr 2023 02:01:57 PM UTC: 
 treemap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
03ad595
Fri 21 Apr 2023 02:02:32 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
4dcc295
Fri 21 Apr 2023 02:13:23 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
a2f9dd8
Fri 21 Apr 2023 02:13:44 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
490bef6
Fri 21 Apr 2023 02:15:02 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
6e2b7f9
Fri 21 Apr 2023 02:16:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
26cc4f2
Fri 21 Apr 2023 02:16:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:21: error: expected expression before ‘=’ token
   57 |         aux->left = = nuevo;
      |                     ^
Compilation failed
4bb2ab0
Fri 21 Apr 2023 02:17:04 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
087dd3b
Fri 21 Apr 2023 02:30:18 PM UTC: 
 treemap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
49c890c
Fri 21 Apr 2023 03:02:40 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:20: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   54 |         TreeNode * nuevo = createTreeNode(key, value);
      |                    ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e2687c1
Fri 21 Apr 2023 03:03:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
42b77af
Fri 21 Apr 2023 03:12:09 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
6a093a5
Fri 21 Apr 2023 03:13:57 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 20/70
6668635
Fri 21 Apr 2023 03:15:26 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 20/70
989af21
Fri 21 Apr 2023 03:15:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
9b727d3
Fri 21 Apr 2023 03:30:35 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
85930c0
Fri 21 Apr 2023 03:46:47 PM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  13|5
total_score: 15/70
edf0d51
Fri 21 Apr 2023 03:46:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
09a828c
Fri 21 Apr 2023 03:47:19 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
89f48f3
Fri 21 Apr 2023 03:48:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
bdff913
Fri 21 Apr 2023 03:48:30 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 20/70
82bece0
Fri 21 Apr 2023 03:48:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
8203505
Fri 21 Apr 2023 03:48:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
0e0a1df
Fri 21 Apr 2023 03:49:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
12fa025
